<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.loginRegister.AccountOptionsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/account_options__image_background"
        android:scaleType="centerCrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:drawableStart="@drawable/ic_kleine_shape"
            android:drawablePadding="6dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRightAddressForShopping"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:text="@string/rightAddress"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

        <TextView
            android:id="@+id/tvQuality"
            style="h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/introduction__tv_quality"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/tvRightAddressForShopping"
            app:layout_constraintStart_toStartOf="@+id/tvRightAddressForShopping"
            app:layout_constraintTop_toBottomOf="@+id/tvRightAddressForShopping" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/options__btnRegister"
            style="@style/blueButtonStyle"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            android:text="@string/account_options__text_register_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvQuality"
            app:layout_constraintStart_toStartOf="@+id/tvQuality"
            app:layout_constraintTop_toBottomOf="@+id/tvQuality" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/options__btnLogin"
            style="@style/whiteButtonStyle"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            android:layout_marginTop="10dp"
            android:text="@string/account_options__text_login_button"
            app:layout_constraintEnd_toEndOf="@+id/tvQuality"
            app:layout_constraintStart_toStartOf="@+id/tvQuality"
            app:layout_constraintTop_toBottomOf="@+id/options__btnRegister" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>