<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.loginRegister.RegisterFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/login__image_description"
        android:scaleType="centerCrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/register__tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:drawableStart="@drawable/ic_kleine_shape"
            android:drawablePadding="6dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register__tvTitle"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/register__title"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/register__tvAppName" />

        <TextView
            android:id="@+id/register__tvSubtitle"
            style="h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/register__account_question"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/register__tvTitle" />

        <!-- Formulario -->
        <EditText
            android:id="@+id/register__etFirstName"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="50dp"
            android:hint="@string/firstName_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/register__tvSubtitle" />

        <EditText
            android:id="@+id/register__etLastName"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/lastName_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/register__etFirstName" />

        <EditText
            android:id="@+id/register__etEmail"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/register__etLastName" />

        <EditText
            android:id="@+id/register__etPassword"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/register__etEmail" />

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/register__btnRegister"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            android:layout_marginTop="15dp"
            android:text="@string/register__buttonRegisterText"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/register__etPassword"
            app:spinning_bar_color="@color/white" />

        <!-- Facebook -->
        <ImageView
            android:id="@+id/register__facebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/facebook_login"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@+id/register__btnRegister" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebookText"
            app:layout_constraintBottom_toBottomOf="@+id/register__facebookLogin"
            app:layout_constraintEnd_toEndOf="@+id/register__facebookLogin"
            app:layout_constraintStart_toStartOf="@+id/register__facebookLogin"
            app:layout_constraintTop_toTopOf="@+id/register__facebookLogin" />

        <!-- Google -->
        <ImageView
            android:id="@+id/register__googleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/google_login"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRegisterRight"
            app:layout_constraintTop_toBottomOf="@+id/register__btnRegister" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GoogleText"
            app:layout_constraintBottom_toBottomOf="@+id/register__googleLogin"
            app:layout_constraintEnd_toEndOf="@+id/register__googleLogin"
            app:layout_constraintStart_toStartOf="@+id/register__googleLogin"
            app:layout_constraintTop_toTopOf="@+id/register__googleLogin" />

        <!-- Lineas de guia -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>