<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/reset_password__tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/reset_password__title"
        android:textColor="@color/md_theme_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reset_password__tvMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/reset_password__message"
        android:textColor="@color/md_theme_tertiary"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/reset_password__tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/reset_password__tvTitle" />

    <EditText
        android:id="@+id/reset_password__etEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="@+id/reset_password__tvMessage"
        app:layout_constraintStart_toStartOf="@+id/reset_password__tvMessage"
        app:layout_constraintTop_toBottomOf="@+id/reset_password__tvMessage" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/reset_password__etEmail"
        app:layout_constraintStart_toStartOf="@+id/reset_password__etEmail"
        app:layout_constraintTop_toBottomOf="@+id/reset_password__etEmail">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reset_password__btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@color/md_theme_surface"
            android:text="@string/textCancel"
            android:textAllCaps="true"
            android:textColor="@color/md_theme_onSurface" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reset_password__btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@color/md_theme_primary"
            android:text="@string/textSend"
            android:textAllCaps="true"
            android:textColor="@color/md_theme_onPrimary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>